--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ highlighter: pygments
 title : Kyle Duggan
 tagline: Site Tagline
 author :
-  name : Name Lastname
+  name : Kyle Duggan 
   email : kyle.duggan@hotmail.ca
   github : kduggan
   twitter : kyle_duggan
