--- a/_config.yml
+++ b/_config.yml
@@ -73,8 +73,11 @@ JB :
   tags_path : /tags.html
   atom_path : /atom.xml
   rss_path : /rss.xml
-
-  # Settings for comments helper
+  
+  paginate: 5
+  paginate_path: "blog/page:num"
+    
+    # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
   # Set 'provider' to false to turn commenting off globally.
   #
