--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ JB :
   rss_path : /rss.xml
   
   paginate: 5
-  paginate_path: "blog/page:num"
+  paginate_path: "blog/page:num/"
     
     # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
