--- a/_config.yml
+++ b/_config.yml
@@ -131,4 +131,5 @@ JB :
   # where [HELPER] is the name of the helper you are overriding.
  
       #includes an icon in the footer for each user name you enter
-               
+              
+gems: ['jekyll-lunr-js-search']      
