--- a/config.yml
+++ b/config.yml
@@ -9,7 +9,7 @@ highlighter: pygments
 # so be sure to set them if your theme uses them.
 #
   title : Kyle Duggan
-  author :
+  author : Kyle Duggan
   name : Kyle Duggan 
   email : kyle.duggan@hotmail.ca
   github : kduggan
